@@ -5,6 +5,7 @@
 #define ONO_ACCOUNTS              100
 #define ONO_ROSTER                200
 #define ONO_MESSAGES              300
+#define ONO_CONFERENCES           320
 #define ONO_MESSAGE_STYLES        350
 #define ONO_FILETRANSFER          375
 #define ONO_HISTORY               400
